--- a/src/components/Showcase/styles.scss
+++ b/src/components/Showcase/styles.scss
@@ -1,85 +1,178 @@
-@import 'src/BS.scss';
+@import "src/BS.scss";
 
 .showcase {
-    padding: 10px;
+  padding: 10px;
 
-    .header {
-        // border-bottom: 2px solid theme-color('secondary');
+  .header {
+    display: grid;
 
-        display: grid;
-        grid-template-columns: 1fr 3fr 1fr;
+    @media (max-width: 1100px) {
+      grid-template-areas:
+        "title title title"
+        "btn   links links";
 
-        background-color: darken(theme-color('dark'), 4%);
-
-        margin: 10px 0;
-        padding: 5px;
-        .btnContainer,
-        .linkContainer {
-            display: grid;
-            align-items: center;
-
-            grid-auto-flow: column;
-        }
-
-        .linkContainer {
-            font-size: 1.25em;
-        }
+      .linkContainer {
+        text-align: center;
+      }
     }
 
-    .grid {
-        display: grid;
-        grid-template-columns: 1fr;
-        grid-gap: 10px;
-
-        .links {
-            display: grid;
-            padding: 5px 20px;
-
-            grid-template-columns: 1fr 1fr;
-
-            a {
-                background-color: darken(theme-color('dark'), 1%);
-                transition: background-color 0.2s;
-
-                &:hover {
-                    background-color: darken(theme-color('dark'), 2%);
-                }
-            }
-        }
-
-        .card {
-            background-color: darken(theme-color('dark'), 4%);
-
-            &:hover {
-                img {
-                    transform: scale(0.95);
-                }
-            }
-        }
-
-        .cardImgWrapper {
-            overflow: hidden;
-
-            img {
-                transition: transform 0.25s;
-                // height: 100%;
-                height: 200px;
-                width: 100%;
-
-                object-fit: fill;
-            }
-        }
-
-        @media (min-width: 768px) {
-            grid-template-columns: 1fr 1fr;
-
-            .cardImgWrapper img {
-                height: 200px;
-            }
-        }
-
-        @media (min-width: 992px) {
-            grid-template-columns: 1fr 1fr 1fr;
-        }
+    @media (min-width: 1100px) {
+      //   grid-template-columns: 1fr 3fr 1fr;
+      grid-template-areas: "btn title title title links";
     }
+
+    background-color: darken(theme-color("dark"), 4%);
+
+    margin: 10px 0;
+    padding: 5px;
+    .btnContainer,
+    .linkContainer {
+      display: grid;
+      align-items: center;
+
+      grid-auto-flow: column;
+    }
+
+    .btnContainer {
+      grid-area: btn;
+    }
+
+    .linkContainer {
+      grid-area: links;
+
+      font-size: 1.25em;
+    }
+
+    h1 {
+      grid-area: title;
+    }
+  }
+
+  .grid {
+    display: grid;
+    grid-template-columns: 1fr;
+    grid-gap: 10px;
+
+    .links {
+      display: grid;
+      padding: 5px 20px;
+
+      grid-template-columns: 1fr 1fr;
+
+      a {
+        background-color: darken(theme-color("dark"), 1%);
+        transition: background-color 0.2s;
+
+        &:hover {
+          background-color: darken(theme-color("dark"), 2%);
+        }
+      }
+    }
+
+    .card {
+      background-color: darken(theme-color("dark"), 4%);
+
+      &.selected::after {
+        content: "Selected";
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 100%;
+
+        background-color: rgba($color: #000000, $alpha: 0.7);
+        color: white;
+
+        font-family: "Open Sans", sans-serif;
+        text-align: center;
+
+        font-size: 2em;
+
+        padding-top: 100px;
+      }
+
+      &:hover {
+        img {
+          transform: scale(0.95);
+        }
+      }
+    }
+
+    .cardImgWrapper {
+      overflow: hidden;
+
+      img {
+        transition: transform 0.25s;
+        // height: 100%;
+        height: 200px;
+        width: 100%;
+
+        object-fit: fill;
+      }
+    }
+
+    @media (min-width: 768px) {
+      grid-template-columns: 1fr 1fr;
+
+      .cardImgWrapper img {
+        height: 200px;
+      }
+    }
+
+    @media (min-width: 992px) {
+      grid-template-columns: 1fr 1fr 1fr;
+    }
+  }
+
+  .showcaseItem {
+    transition: max-height 1s, opacity 0.2s;
+    overflow: hidden;
+    padding: 5px 0;
+
+    .descriptionGrid {
+      display: grid;
+    }
+
+    &.hidden {
+      max-height: 0;
+      opacity: 0;
+    }
+
+    &.shown {
+      opacity: 100%;
+      max-height: 1500px;
+    }
+
+    .descriptionGrid {
+      .carousel {
+        margin-bottom: 25px;
+        .carousel-item {
+          height: 600px;
+        }
+      }
+    }
+
+    @media (max-width: 992px) {
+      .descriptionGrid {
+        .carousel {
+          margin-bottom: 25px;
+          .carousel-item {
+            height: 300px;
+          }
+        }
+      }
+      // }
+
+      @media (max-width: 1200px) and (min-width: 992px) {
+        .descriptionGrid {
+          .carousel {
+            margin-bottom: 25px;
+            .carousel-item {
+              height: 600px;
+            }
+          }
+        }
+      }
+    }
+  }
 }
