--- a/src/components/Showcase/styles.scss
+++ b/src/components/Showcase/styles.scss
@@ -7,6 +7,7 @@
     display: grid;
 
     @media (max-width: 1100px) {
+      grid-template-columns: 1fr 1fr 1fr;
       grid-template-areas:
         "title title title"
         "btn   links links";
@@ -17,8 +18,8 @@
     }
 
     @media (min-width: 1100px) {
-      //   grid-template-columns: 1fr 3fr 1fr;
-      grid-template-areas: "btn title title title links";
+      grid-template-columns: 1fr 2fr 1fr;
+      grid-template-areas: "btn title links";
     }
 
     background-color: darken(theme-color("dark"), 4%);
@@ -39,8 +40,8 @@
 
     .linkContainer {
       grid-area: links;
-
       font-size: 1.25em;
+      text-align: center;
     }
 
     h1 {
