--- a/src/components/Showcase/styles.scss
+++ b/src/components/Showcase/styles.scss
@@ -103,7 +103,7 @@
             overflow: hidden;
 
             img {
-                transition: transform 0.25s;
+                // transition: transform 0.25s;
                 // height: 100%;
                 height: 200px;
                 width: 100%;
@@ -126,7 +126,7 @@
     }
 
     .showcaseItem {
-        transition: max-height 1s, opacity 0.2s;
+        // transition: max-height 1s, opacity 0.2s;
         overflow: hidden;
         padding: 5px 0;
 
@@ -148,12 +148,20 @@
             .carousel {
                 margin-bottom: 25px;
                 .carousel-item {
-                    height: 600px;
+                    max-height: 600px;
+
+                    &:hover {
+                        .backgroundImg {
+                            transform: scale(0.95);
+                        }
+                    }
 
                     .backgroundImg {
                         position: absolute;
                         top: -10%;
                         width: 100%;
+
+                        transition: 2s transform;
                     }
 
                     .frontImgContainer {
@@ -170,6 +178,19 @@
             }
         }
 
+        @media (max-width: 576px) {
+            .descriptionGrid {
+                .carousel {
+                    // margin-bottom: 25px;
+                    .carousel-item {
+                        // height: 300px;
+                        // height: 80vh;
+                        height: auto !important;
+                    }
+                }
+            }
+        }
+
         @media (max-width: 992px) {
             .descriptionGrid {
                 .carousel {
@@ -180,14 +201,14 @@
                     }
                 }
             }
+        }
 
-            @media (max-width: 1200px) and (min-width: 992px) {
-                .descriptionGrid {
-                    .carousel {
-                        margin-bottom: 25px;
-                        .carousel-item {
-                            height: 600px;
-                        }
+        @media (min-width: 992px) {
+            .descriptionGrid {
+                .carousel {
+                    margin-bottom: 25px;
+                    .carousel-item {
+                        height: 500px;
                     }
                 }
             }
