--- a/src/components/Showcase/styles.scss
+++ b/src/components/Showcase/styles.scss
@@ -59,6 +59,30 @@
         .card {
             background-color: darken(theme-color('dark'), 4%);
 
+            .card-body {
+                padding-top: 10px;
+            }
+
+            .card-title {
+                font-size: 1.5em;
+            }
+
+            .tagContainer {
+                display: grid;
+                grid-template-columns: 1fr 1fr 1fr 1fr;
+                grid-template-rows: 1fr 1fr;
+                grid-gap: 5px;
+
+                min-height: 45px;
+
+                margin-bottom: 10px;
+
+                .badge {
+                    display: block;
+                    // margin: 0 2px;
+                }
+            }
+
             &.selected::after {
                 content: 'Selected';
                 position: absolute;
