--- a/src/components/Showcase/styles.scss
+++ b/src/components/Showcase/styles.scss
@@ -113,10 +113,10 @@
                 background-color: theme-color('primary');
 
                 img {
-                    height: 200px;
                     width: 100%;
 
-                    object-fit: fill;
+                    // object-position: top;
+                    object-fit: cover;
                     transition: transform 0.2s;
                 }
             }
@@ -163,6 +163,14 @@
 
         &.hidden {
             display: none;
+        }
+
+        iframe {
+            width: 100%;
+            height: 600px;
+
+            margin: 0 auto;
+            border: none;
         }
 
         .carousel {
