--- a/src/components/Showcase/styles.scss
+++ b/src/components/Showcase/styles.scss
@@ -58,6 +58,23 @@
 
         .card {
             background-color: darken(theme-color('dark'), 4%);
+            transition: transform 0.2s, width 0.2s, box-shadow 0.2s;
+            box-shadow: 0 0 0 black;
+
+            &:hover {
+                img {
+                    transform: scale(0.97);
+                }
+
+                .card-title {
+                    text-decoration: underline;
+                }
+
+                box-shadow: 0 5px 10px black;
+                transform: scale(1.01);
+
+                z-index: 2;
+            }
 
             .card-body {
                 padding-top: 10px;
@@ -79,7 +96,6 @@
 
                 .badge {
                     display: block;
-                    // margin: 0 2px;
                 }
             }
 
@@ -102,21 +118,15 @@
                 padding-top: 100px;
             }
 
-            &:hover {
-                img {
-                    transform: scale(0.95);
-                }
-            }
-
             .cardImgWrapper {
                 overflow: hidden;
                 background-color: theme-color('primary');
 
+                height: 150px;
                 img {
                     width: 100%;
-
-                    // object-position: top;
                     object-fit: cover;
+
                     transition: transform 0.2s;
                 }
             }
@@ -144,8 +154,8 @@
         @media (min-width: 768px) {
             grid-template-columns: 1fr 1fr;
 
-            .cardImgWrapper img {
-                height: 200px;
+            .cardImgWrapper {
+                height: 175px !important;
             }
         }
 
@@ -175,14 +185,20 @@
 
         .carousel {
             margin-bottom: 5px;
+
+            .carousel-indicators li,
+            .carousel-control-prev:hover,
+            .carousel-control-next:hover {
+                background-color: rgba(0, 0, 0, 0.5);
+            }
             .carousel-item {
                 max-height: 600px;
 
                 .backgroundImg {
                     position: absolute;
-                    top: -10%;
                     width: 100%;
                     transform: scale(1.1);
+                    filter: grayscale(0.75);
                 }
 
                 .frontImgContainer {
@@ -192,6 +208,7 @@
                         display: block;
                         margin: 0 auto;
                         transform: scale(0.95);
+                        box-shadow: 0 0 10px;
                     }
                     backdrop-filter: blur(15px);
                 }
