--- a/src/components/Showcase/styles.scss
+++ b/src/components/Showcase/styles.scss
@@ -1,4 +1,5 @@
 @import 'src/BS.scss';
+@import './cardStyles.scss';
 
 .showcase {
     padding-top: 10px;
@@ -49,6 +50,7 @@
         }
     }
 
+    /*
     .cardGrid {
         display: grid;
         grid-template-columns: 1fr;
@@ -57,6 +59,7 @@
 
         padding: 10px 0;
 
+        
         .card {
             background-color: darken(theme-color('dark'), 4%);
             transition: transform 0.2s, width 0.2s, box-shadow 0.2s, top 0.2s;
@@ -156,7 +159,8 @@
         @media (min-width: 992px) {
             grid-template-columns: 1fr 1fr 1fr;
         }
-    }
+        
+    }*/
 
     .showcaseItem {
         overflow: hidden;
