--- a/src/components/Showcase/styles.scss
+++ b/src/components/Showcase/styles.scss
@@ -221,10 +221,10 @@
             }
         }
 
-        @media (max-width: 992px) {
+        @media (min-width: 576px) and (max-width: 992px) {
             .carousel {
                 .carousel-item {
-                    height: 80vh;
+                    height: 75vh;
                 }
             }
         }
