--- a/resume/styles.css
+++ b/resume/styles.css
@@ -1,4 +1,3 @@
-/* TODO: This needs a lot of work to look nicer */
 
 body {
     font-family: 'Roboto', sans-serif;
@@ -12,17 +11,23 @@ body {
     page-break-inside: avoid;
 }
 
-.level3 {
+.level3:not(:last-of-type) {
     margin-bottom: 50px;
 }
 
+
 h1 {
-    margin: 0 0 10px 0;
+    margin: 0;
     font-size: 3em;
 }
 
 h2 {
     color: grey;
+    margin-top: 50px;
+}
+
+h2#skills-and-abilities {
+    margin: 25px 0 0 0 ;
 }
 
 h1,
@@ -39,14 +44,18 @@ h5 {
     grid-auto-flow: column;
     border-top: 1px solid darkslategray;
     border-bottom: 1px solid darkslategray;
-    margin-bottom: 25px;
 }
 
 #headerLinks a {
-    display: block;
-    color: skyblue;
+    color: lightskyblue;
     text-decoration: none;
+    font-weight: bold;
 }
+
+#headerLinks p {
+    margin: 5px 0;
+}
+
 
 .headerPart1 {
     font-weight: normal;
@@ -54,8 +63,12 @@ h5 {
 }
 
 .level2 * {
-    text-align: justify;
-    line-height: 1.2em;
+    /* text-align: justify; */
+    line-height: 1.25em;
+}
+
+p, li {
+    font-size: 12pt;
 }
 
 li {
@@ -71,7 +84,6 @@ li {
 }
 
 .page-break {
-    page-break-after: always;
+    /* page-break-after: always; */
 }
 
-/* TODO: Style cover page */
