--- a/resume/styles.css
+++ b/resume/styles.css
@@ -1,10 +1,7 @@
 
 body {
-    font-family: 'Roboto', sans-serif;
+    font-family:  Arial, Helvetica, sans-serif;
 }
-
-@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans&display=swap');
 
 .level2,
 .level3 {
@@ -19,10 +16,11 @@ body {
 h1 {
     margin: 0;
     font-size: 3em;
+    color: darkslategray;
 }
 
 h2 {
-    color: grey;
+    color: darkslategray;
     margin-top: 50px;
 }
 
@@ -30,13 +28,6 @@ h2#skills-and-abilities {
     margin: 25px 0 0 0 ;
 }
 
-h1,
-h2,
-h3,
-h4,
-h5 {
-    font-family: 'Open Sans', sans-serif;
-}
 
 #headerLinks {
     display: grid;
@@ -47,9 +38,9 @@ h5 {
 }
 
 #headerLinks a {
-    color: lightskyblue;
+    color: slateblue;
     text-decoration: none;
-    font-weight: bold;
+    /* font-weight: bold; */
 }
 
 #headerLinks p {
