--- a/src/components/Markdown/styles.scss
+++ b/src/components/Markdown/styles.scss
@@ -1,32 +1,32 @@
-@import "src/BS.scss";
+@import 'src/vars.scss';
 
 .markdown {
-  font-size: 1.1em;
+    font-size: 1.1em;
 
-  border-radius: 5px;
-  background-color: darken(theme-color("dark"), 5%);
-  padding: 5px 10px;
+    border-radius: 5px;
+    background-color: $darker;
+    padding: 5px 10px;
 
-  // Super hacky custom bullet point colors ¯\_(ツ)_/¯
-  ul {
-    margin-top: -10px;
-    list-style: none;
-
+    // Super hacky custom bullet point colors ¯\_(ツ)_/¯
     ul {
-      margin-top: 0;
-    }
+        margin-top: -10px;
+        list-style: none;
 
-    li {
-      margin: 10px 0;
-    }
+        ul {
+            margin-top: 0;
+        }
 
-    li::before {
-      content: "■ ";
-      color: theme-color("primary");
-      font-size: 0.5em;
-      vertical-align: middle;
-      position: relative;
-      top: -2px;
+        li {
+            margin: 10px 0;
+        }
+
+        li::before {
+            content: '■ ';
+            color: $primary;
+            font-size: 0.5em;
+            vertical-align: middle;
+            position: relative;
+            top: -2px;
+        }
     }
-  }
 }
