--- a/src/components/Showcase/styles.scss
+++ b/src/components/Showcase/styles.scss
@@ -1,4 +1,4 @@
-@import 'src/BS.scss';
+@import 'src/vars.scss';
 @import './cardStyles.scss';
 
 .showcase {
@@ -23,7 +23,7 @@
             grid-template-areas: 'btn title links';
         }
 
-        background-color: darken(theme-color('dark'), 4%);
+        background-color: $darker;
 
         margin: 10px 0;
         padding: 5px;
@@ -129,9 +129,9 @@
 
         .markdown {
             h1 {
-                color: theme-color('primary');
+                color: $primary;
                 padding-bottom: 5px;
-                border-bottom: 2px solid theme-color('primary');
+                border-bottom: 2px solid $primary;
             }
 
             h2 {
