Removed more Bootstrap

--- a/src/components/Markdown/styles.scss
+++ b/src/components/Markdown/styles.scss
@@ -6,6 +6,7 @@
     border-radius: 5px;
     background-color: $darker;
     padding: 5px 10px;
+    color: $white;
 
     // Super hacky custom bullet point colors ¯\_(ツ)_/¯
     ul {
