--- a/src/App.scss
+++ b/src/App.scss
@@ -1,33 +1,46 @@
 @import 'src/vars.scss';
 @import './BS.scss';
 
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital@0;1&family=Roboto:ital@0;1&display=swap');
+
+a {
+    color: inherit;
+    text-decoration: none;
+}
+
 html,
 #root {
     background-color: $dark;
+    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
+        'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+}
+
+.text-white {
+    color: $white;
 }
 
 .mainContainer {
     // background-color: $darker;
 }
 
-.container {
+._container {
     padding-right: 15px;
     padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
 }
 @media (min-width: 768px) {
-    .container {
+    ._container {
         width: 750px;
     }
 }
 @media (min-width: 992px) {
-    .container {
+    ._container {
         width: 970px;
     }
 }
 @media (min-width: 1200px) {
-    .container {
+    ._container {
         width: 1170px;
     }
 }
