--- a/src/BS.scss
+++ b/src/BS.scss
@@ -1,6 +1,6 @@
-$theme-colors: (
-  "primary": #b2dca2,
-  "test": blue,
-);
+// $theme-colors: (
+//   "primary": #b2dca2,
+//   "test": blue,
+// );
 
-@import "~bootstrap/scss/bootstrap";
+@import '~bootstrap/scss/bootstrap';
