--- a/src/components/Showcase/styles.scss
+++ b/src/components/Showcase/styles.scss
@@ -42,7 +42,7 @@
                 color: $red;
                 font-size: 20px;
                 text-align: center;
-                width: 50%;
+                // width: 50%;
                 border-radius: 5px;
                 padding-bottom: 2px;
 
@@ -56,6 +56,7 @@
         }
 
         .linkContainer {
+            color: $primary;
             grid-area: links;
             font-size: 1.25em;
             text-align: center;
@@ -89,58 +90,30 @@
             border: none;
         }
 
-        .carousel {
-            margin-bottom: 5px;
-
-            .carousel-indicators li,
-            .carousel-control-prev:hover,
-            .carousel-control-next:hover {
-                background-color: rgba(0, 0, 0, 0.5);
+        .scCarousel {
+            .slide {
+                background: $darker;
             }
-            .carousel-item {
-                max-height: 600px;
 
-                .backgroundImg {
-                    position: absolute;
-                    width: 100%;
-                    filter: grayscale(75%);
-                }
-
-                .frontImgContainer {
-                    width: 100%;
-                    height: 100%;
+            .carouselPage {
+                &.mobile {
+                    $maxHeight: 100vw;
+                    max-height: $maxHeight;
                     img,
                     video {
-                        display: block;
-                        margin: 0 auto;
-                        transform: scale(0.95);
-                        box-shadow: 0 0 10px black;
+                        max-height: $maxHeight;
+                        width: auto;
                     }
-                    backdrop-filter: blur(15px);
                 }
-            }
-        }
 
-        @media (max-width: 576px) {
-            .carousel {
-                .carousel-item {
-                    height: auto !important;
-                }
-            }
-        }
-
-        @media (min-width: 576px) and (max-width: 992px) {
-            .carousel {
-                .carousel-item {
-                    height: 75vh;
-                }
-            }
-        }
-
-        @media (min-width: 992px) {
-            .carousel {
-                .carousel-item {
-                    height: 500px;
+                &.desktop {
+                    $maxHeight: 500px;
+                    max-height: $maxHeight;
+                    img,
+                    video {
+                        max-height: $maxHeight;
+                        width: auto;
+                    }
                 }
             }
         }
