--- a/src/components/Markdown/styles.scss
+++ b/src/components/Markdown/styles.scss
@@ -23,7 +23,7 @@
 
         li::before {
             content: '■ ';
-            color: $primary;
+            color: $mainColor;
             font-size: 0.5em;
             vertical-align: middle;
             position: relative;
