--- a/src/components/navbar/styles.scss
+++ b/src/components/navbar/styles.scss
@@ -1,7 +1,7 @@
 @import 'src/vars.scss';
 
 .topBar {
-    color: $primary;
+    color: $mainColor;
     background-color: $dark;
     z-index: 100;
 
