--- a/src/App.scss
+++ b/src/App.scss
@@ -13,19 +13,30 @@ html,
     background-color: $dark;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, 'Noto Sans', sans-serif,
         'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol', 'Noto Color Emoji';
+    padding: 20px 10px;
+}
+
+html {
+    overflow-y: overlay;
+}
+::-webkit-scrollbar {
+    width: 6px;
+}
+ 
+::-webkit-scrollbar-track {
+    -webkit-box-shadow: inset 0 0 6px rgba(0,0,0,0.3); 
+}
+ 
+::-webkit-scrollbar-thumb {
+    background: $mainColor; 
 }
 
 .text-white {
     color: $white;
 }
 
-.mainContainer {
-    // background-color: $darker;
-}
 
 ._container {
-    padding-right: 15px;
-    padding-left: 15px;
     margin-right: auto;
     margin-left: auto;
 }
