--- a/src/components/Showcase/cardStyles.scss
+++ b/src/components/Showcase/cardStyles.scss
@@ -87,10 +87,27 @@ $ratio: 1.5;
 
             padding: $gap;
             a {
-                // background-color: $dark;
                 color: $mainColor;
-                text-align: center;
-                display: block;
+                text-decoration: none;
+
+                display: grid;
+                grid-auto-flow: column;
+                grid-template-columns: 40px auto;
+
+                --opacity: 0.1;
+                &:hover {
+                    --opacity: 0.2;
+                }
+                
+                .icon {
+                    background-color: rgba(0,0,0, var(--opacity));
+                    text-align: center;
+                }
+
+                .text {
+                    background: linear-gradient(90deg, rgba(0,0,0, var(--opacity)) 0%, rgba(0,0,0,0) 100% );
+                    padding-left: 5px;
+                }
             }
         }
     }
