--- a/src/components/navbar/styles.scss
+++ b/src/components/navbar/styles.scss
@@ -13,6 +13,8 @@
     display: grid;
     grid-auto-flow: column;
 
+    grid-template-columns: 1fr 1fr 1fr;
+
     .barLink {
         text-align: center;
         font-size: 1.2em;
