Update colors and fonts

--- a/src/App.scss
+++ b/src/App.scss
@@ -55,3 +55,8 @@ html {
         width: 1170px;
     }
 }
+
+h1, h2, h3, h4, h5, a, .backBtn{
+    font-family: 'Roboto';
+    text-transform: uppercase;
+}
