--- a/src/components/navbar/styles.scss
+++ b/src/components/navbar/styles.scss
@@ -27,6 +27,7 @@
 
             &:hover {
                 background-color: $darker;
+                color: $mainColor;
             }
         }
     }
