--- a/src/components/navbar/styles.scss
+++ b/src/components/navbar/styles.scss
@@ -1,36 +1,36 @@
-@import 'src/vars.scss';
+@import "src/vars.scss";
 
 .topBar {
-    color: $mainColor;
-    background-color: $dark;
-    z-index: 100;
+  color: $mainColor;
+  background-color: $dark;
+  z-index: 100;
 
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100vw;
+  position: fixed;
+  top: 5px;
+  left: 0;
+  width: 100vw;
 
-    display: grid;
-    grid-auto-flow: column;
+  display: grid;
+  grid-auto-flow: column;
 
-    grid-template-columns: 1fr 1fr 1fr;
+  grid-template-columns: 1fr 1fr 1fr;
 
-    .barLink {
-        text-align: center;
-        font-size: 1.2em;
-        a {
-            margin: 0 auto;
-            transition: background-color 0.25s;
-            white-space: nowrap;
-            display: block;
+  .barLink {
+    text-align: center;
+    font-size: 1.2em;
+    a {
+      margin: 0 auto;
+      transition: background-color 0.25s;
+      white-space: nowrap;
+      display: block;
 
-            max-width: 100%;
-            text-decoration: none;
+      max-width: 100%;
+      text-decoration: none;
 
-            &:hover {
-                background-color: $darker;
-                color: $mainColor;
-            }
-        }
+      &:hover {
+        background-color: $darker;
+        color: $mainColor;
+      }
     }
+  }
 }
