--- a/src/components/Showcase/styles.scss
+++ b/src/components/Showcase/styles.scss
@@ -132,5 +132,12 @@
                 padding-left: 20px;
             }
         }
+
+        h2 {
+            padding-top: 2.5em;
+            text-align: center;
+            color: $mainColor;
+            border-bottom: 1px solid $mainColor;
+        }
     }
 }
